@@ -1,3 +1,8 @@
+2001-03-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* m68040/fpsp/Makefile.am, shared/cache/Makefile.am:
+	Apply include_*HEADERS instead of H_FILES.
+
 2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.
